Shang New Live/src/objects/JE_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT (COA_Master__r.Account_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From related COA Master</inlineHelpText>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_Master_CC__c</fullName>
        <description>This will be used to populate COA Master in JE based on COA CC</description>
        <formula>TEXT ( COA_Master__r.Currency_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Currency Code from related COA Master</inlineHelpText>
        <label>COA Master CC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COA Master</label>
        <referenceTo>COA_Master__c</referenceTo>
        <relationshipLabel>JE Configurations</relationshipLabel>
        <relationshipName>JE_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JE_Logic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JE Logic</label>
        <referenceTo>JE_Logic__c</referenceTo>
        <relationshipLabel>JE Configurations</relationshipLabel>
        <relationshipName>JE_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JV_Run__c</fullName>
        <inlineHelpText>This is applicable for &apos;Advance Rental&apos; cases only.</inlineHelpText>
        <label>JV Run</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Run 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Journal_Amount__c</fullName>
        <label>Journal Amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Document Amount</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Tax Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summarization__c</fullName>
        <label>Summarization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dr</fullName>
                </value>
                <value>
                    <fullName>Cr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>JE Configuration</label>
    <nameField>
        <displayFormat>JEC-{000000}</displayFormat>
        <label>JE Config ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JE Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>